--- a/webStudy/pom.xml
+++ b/webStudy/pom.xml
@@ -23,7 +23,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        
+		
+		<!-- Spring Boot Security -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-security</artifactId>
+	    </dependency>
+	    
         <!-- Spring Boot Starter JDBC -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -36,7 +42,7 @@
             <artifactId>mariadb-java-client</artifactId>
         </dependency>
 
-        <!-- MyBatis -->
+        <!-- MyBatis Starter -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
