--- a/webStudy/pom.xml
+++ b/webStudy/pom.xml
@@ -25,10 +25,10 @@
         </dependency>
 		
 		<!-- Spring Boot Security -->
-	    <dependency>
-	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-starter-security</artifactId>
-	    </dependency>
+<!--	    <dependency>-->
+<!--	        <groupId>org.springframework.boot</groupId>-->
+<!--	        <artifactId>spring-boot-starter-security</artifactId>-->
+<!--	    </dependency>-->
 	    
         <!-- Spring Boot Starter JDBC -->
         <dependency>
