관리자로그인, 로그아웃, 게시판기본 화면추가

--- a/webStudy/src/main/resources/application.properties
+++ b/webStudy/src/main/resources/application.properties
@@ -13,3 +13,6 @@ mybatis.type-aliases-package=com.example.demo.dto
 # Server JSP configuration
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+# 초 기반
+server.servlet.session.timeout=1800
