시큐리티 구글로그인 추가

--- a/webStudy/src/main/resources/application.properties
+++ b/webStudy/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.mvc.view.suffix=.jsp
 
 # 초 기반
 server.servlet.session.timeout=1800
+
+# Google OAuth 2.0 설정
+spring.security.oauth2.client.registration.google.client-id=클라이언트 ID
+spring.security.oauth2.client.registration.google.client-secret=비밀번호
+spring.security.oauth2.client.registration.google.scope=profile, email
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
