--- a/webStudy/pom.xml
+++ b/webStudy/pom.xml
@@ -30,6 +30,12 @@
 	        <artifactId>spring-boot-starter-security</artifactId>
 	    </dependency>
 	    
+		<!-- spring-security-oauth2-client -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-oauth2-client</artifactId>
+		</dependency>
+	    
         <!-- Spring Boot Starter JDBC -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
