--- a/webStudy/src/main/resources/application.properties
+++ b/webStudy/src/main/resources/application.properties
@@ -22,3 +22,16 @@ spring.security.oauth2.client.registration.google.client-id=클라이언트 ID
 spring.security.oauth2.client.registration.google.client-secret=비밀번호
 spring.security.oauth2.client.registration.google.scope=profile, email
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+
+# Naver OAuth 2.0 설정
+spring.security.oauth2.client.registration.naver.client-id=클라이언트 ID
+spring.security.oauth2.client.registration.naver.client-secret=비밀번호
+spring.security.oauth2.client.registration.naver.scope=name,email
+spring.security.oauth2.client.registration.naver.client-name=Naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
