--- a/webStudy/pom.xml
+++ b/webStudy/pom.xml
@@ -94,6 +94,10 @@
     </dependencies>
     <build>
         <plugins>
+        	<plugin>
+            	<groupId>org.springframework.boot</groupId>
+            	<artifactId>spring-boot-maven-plugin</artifactId>
+        	</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
